@@ -19,20 +19,6 @@
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
       </plugin>
-      <plugin>
-		<groupId>org.eclipse.tycho</groupId>
-		<artifactId>tycho-surefire-plugin</artifactId>
-		<version>${tycho-version}</version>
-		<configuration>
-			<includes>
-				<include>org/eclipse/m2m/atl/tests/suite/AllTests.class</include>
-			</includes>	
-			<useUIHarness>false</useUIHarness>
-			<useUIThread>false</useUIThread>
-			<argLine>-Xmx1024m</argLine>
-			<argLine>-XX:MaxPermSize=256m</argLine>			
-		</configuration>
-	</plugin>
     </plugins> 
   </build>
 </project>
